--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -51,6 +51,30 @@
                 {% endfor %}
             </div>
             <!-- Course detail template changes go here -->
+            {% if user.is_authenticated %}
+            <button class="btn btn-primary btn-block" date-toggle="collapse" date-target="#exam">Start Exam</button>
+            <div id="exam", class="collapse">
+                <form id="questionform" action="{% url onlinecourse:submit course.id%}" method="POST">
+                <div class="card-columns-vertical">
+                    {% for question in course.question_set.all %}
+                        <div class="card-mt1"><h5>question: {{question.text}}</h5></div>
+                        {%csrf_token%}
+                        <div class="form-group">
+                        {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" name="choice_{{choice.id}}" class="form-check-input"
+                                    id="{{choice.id}}" value="{{choice.id}}"
+                                    <p>{{ choice.text }}</p>
+                                </label>
+                            </div>
+                        {% endfor %}
+                        </div>
+                    {% endfor %}
+                </div>
+                </form>
+            </div>
+            {% endif %}
     </div>
 </body>
 </html>
