--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -52,9 +52,9 @@
             </div>
             <!-- Course detail template changes go here -->
             {% if user.is_authenticated %}
-            <button class="btn btn-primary btn-block" date-toggle="collapse" date-target="#exam">Start Exam</button>
+            <button class="btn btn-primary btn-block" data-toggle="collapse" data-target="#exam">Start Exam</button>
             <div id="exam", class="collapse">
-                <form id="questionform" action="{% url onlinecourse:submit course.id%}" method="POST">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id%}" method="POST">
                 <div class="card-columns-vertical">
                     {% for question in course.question_set.all %}
                         <div class="card-mt1"><h5>question: {{question.text}}</h5></div>
@@ -71,6 +71,7 @@
                         {% endfor %}
                         </div>
                     {% endfor %}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
                 </div>
                 </form>
             </div>
